Correction details sur l'élement collapse

--- a/src/components/Carrousel/Carousel.scss
+++ b/src/components/Carrousel/Carousel.scss
@@ -2,14 +2,13 @@
   width: 100%;
   object-fit: cover;
   border-radius: 25px;
-  
 }
 
 .btnCarousel{
   background: transparent;
   border: none;
   position: absolute;
-
+  cursor: pointer;
 }
 
 .image-counter{
